--- a/birthday.html
+++ b/birthday.html
@@ -175,9 +175,7 @@
                 "Cậu xứng đáng có được tất cả những điều tốt đẹp nhất trên đời này. Hãy luôn giữ nụ cười và trái tim ấm áp như bây giờ nhé!"
             </p>
             <p class="quote-text">
-                "Nếu đến khi đã trưởng thành, trong tim cậu vẫn còn một chỗ trống, cho phép tớ được bước vào và thương cậu với nhé." 💙
-                <br>
-                "Nếu cậu đồng ý, hãy nhấn nút 'Đồng ý' bên dưới để tớ biết nhé!"
+                "Nếu trong tim cậu vẫn còn một chỗ trống, cho phép tớ được bước vào và thương cậu với" 💙
                 <br>
                 <!-- Nút "Đồng ý" -->
                 <button id="agreeButton" class="agree-button">Đồng ý 💌</button>
@@ -251,7 +249,7 @@
     </div>
     
     <audio id="background-music" loop>
-        <source src="ytmp3free.cc_mot-doi-14-casper-bon-nghiem-feat-buitruonglinh-track-03-album-so-khong-youtubemp3free.org.mp3" type="audio/mpeg">
+        <source src="ytmp3free.cc_pages-wimy-lyrics-video-youtubemp3free.org.mp3" type="audio/mpeg">
     </audio>
 
     <script src="birthday-script.js"></script>
@@ -262,7 +260,7 @@
             <button class="close-alert-btn">&times;</button>
             <!-- Hộp thông báo màu vàng -->
             <div class="alert-message">
-                Hãy nhắn cho mình "Ariel" để mình hiểu với nhé!
+                Cảm ơn cậu, hãy nhắn cho mình "Ariel" để mình hiểu với nhé!
             </div>
         </div>
     </div>
